test/good/14-multi-dim-arr.mac



int main() {
    int[][] arr = new int[7][7];
    int i = 0;
    while(i < arr::LENGTH) {
        int j = 0;
        while(j < arr[i]::LENGTH) {
            arr[i][j] = i+j;
            print << arr[i][j] << " ";
            j = j+1;
        }
        i=i+1;
    }
    print << "\n";
    int[][] arr2 = add_one_to_all(arr);
    add_one_to_all_by_ref(arr);
    return 0;
}

int[][] add_one_to_all(int[][] arr) {
    int i = 0;
    while(i < arr::LENGTH) {
        int j = 0;
        while(j < arr[i]::LENGTH) {
            arr[i][j] = arr[i][j]+1;
            print << arr[i][j] << " ";
            j = j+1;
        }
        i=i+1;
    }
    print << "\n";
    return arr;
}

int[][] add_one_to_all_by_ref(int[][] & arr) {
    int i = 0;
    while(i < arr::LENGTH) {
        int j = 0;
        while(j < arr[i]::LENGTH) {
            arr[i][j] = arr[i][j]+1;
            print << arr[i][j] << " ";
            j = j+1;
        }
        i=i+1;
    }
    print << "\n";
    return arr;
}