test/bad/forbidden-id.mac




int main() {
    int while = 5;
    return 0;
}